New in svn version:

   * dynmat.x can calculate phonon contribution to dielectric tensor
   * CELL_PARAMETERS written on output using the same format as in input
   * turboTDDFT now supports hybrid functionals (only with norm-conserving
     pseudopotentials.)

Fixed in svn version:

   * Bogus "file not found" error in pp.x when extracting quantities not
     requiring wave functions if these were "collected" - v.5.0.2 only
   * some quantities calculated in real space (including the charge itself
     when tqr=.true.) were not always accurately computed in parallel
     execution if the number of planes wasn't the same for all processors
   * Bogus symmetry error in NEB due to missing re-initialization
     of fractional translations
   * PW, PP, PHonon: files for DFT+U produced by previous versions
     could no longer be read
   * PHonon: restart with convt=.true. was not working with PAW
   * PHonon: in matdyn.x, displacement patterns were no longer correct
     if eigenvectors of the dynamical matrix were also written to file
   * PHonon: compatibility with files produced by previous releases
     was broken if pool were used
   * PHonon: the recently introduced symmetry Sq=-q+G has still some problem:
     currently disabled
   * divide_class: wrong check for T_h
   * PHonon: effective charges eu + PAW were not accurate with pools;
     effective charges eu + US PP + spin-orbit nonmagnetic were not
     working in parallel.
   * Bug fix for NC pseudos with GIPAW info, for upf version 2 only:
     Pseudo local potential was incorrectly written and read. 
   * PP: incorrect check in bands.f90 (v.5.0.2 only)
   * CP wasn't working properly with USPP having distinct Q functions 
     for each value of l, due to the never ending l/l+1 problem

Incompatible changes in svn version:
   * calls to "find_equiv_sites" and "writemodes" changed (fixed dimension
     "nax" removed)
   * call to "open_buffer" changed: unit must be a valid fortran unit > 0;