@@ -226,7 +226,6 @@ chi_test.o : ../../Modules/wavefunctions.o
 chi_test.o : ../../PW/src/pwcom.o
 chi_test.o : phcom.o
 chi_test.o : ramanm.o
-clean_pw_ph.o : ../../Modules/control_flags.o
 clean_pw_ph.o : ../../Modules/kind.o
 clean_pw_ph.o : phcom.o
 clean_pw_ph.o : save_ph_input.o
@@ -592,9 +591,7 @@ dynmatrix.o : ../../Modules/io_global.o
 dynmatrix.o : ../../Modules/ions_base.o
 dynmatrix.o : ../../Modules/kind.o
 dynmatrix.o : ../../Modules/noncol.o
-dynmatrix.o : ../../Modules/run_info.o
 dynmatrix.o : ../../PW/src/symm_base.o
-dynmatrix.o : dfile_star.o
 dynmatrix.o : io_dyn_mat.o
 dynmatrix.o : ph_restart.o
 dynmatrix.o : phcom.o
@@ -935,6 +932,7 @@ phonon.o : ../../Modules/check_stop.o
 phonon.o : ../../Modules/environment.o
 phonon.o : ../../Modules/mp_global.o
 phonon.o : elph.o
+phonon.o : ph_restart.o
 phonon.o : phcom.o
 phq_init.o : ../../Modules/atom.o
 phq_init.o : ../../Modules/becmod.o
@@ -1188,15 +1186,16 @@ rotate_dvscf_star.o : ../../PW/src/symm_base.o
 rotate_dvscf_star.o : dfile_star.o
 rotate_dvscf_star.o : phcom.o
 rotate_pattern_add.o : ../../Modules/kind.o
-run_pwscf.o : ../../Modules/control_flags.o
-run_pwscf.o : ../../Modules/fft_base.o
-run_pwscf.o : ../../Modules/io_files.o
-run_pwscf.o : ../../Modules/mp_global.o
-run_pwscf.o : ../../PW/src/pwcom.o
-run_pwscf.o : ../../PW/src/scf_mod.o
-run_pwscf.o : acfdtest.o
-run_pwscf.o : phcom.o
-run_pwscf.o : save_ph_input.o
+run_nscf.o : ../../Modules/control_flags.o
+run_nscf.o : ../../Modules/fft_base.o
+run_nscf.o : ../../Modules/io_files.o
+run_nscf.o : ../../Modules/io_global.o
+run_nscf.o : ../../Modules/mp_global.o
+run_nscf.o : ../../PW/src/pwcom.o
+run_nscf.o : ../../PW/src/scf_mod.o
+run_nscf.o : acfdtest.o
+run_nscf.o : phcom.o
+run_nscf.o : save_ph_input.o
 save_ph_input.o : ../../Modules/io_files.o
 save_ph_input.o : ../../Modules/ions_base.o
 save_ph_input.o : ../../Modules/kind.o
