@@ -23,6 +23,10 @@ contain tests for the three modes of operation, respectively:
 all-electron run, pseudo-potential generation, pseudo-potential testing. 
 Directories pseudo_library/ and paw_library/ contain input data used 
 for pseudopotential generation of many elements.
+A more extended set of input data is now available from the
+pslibrary project. Please see the web page 
+http://qe-forge.org/gf/project/pslibrary and click on Files to download 
+the library.
 
 All the material included in this distribution is free software;
 you can redistribute it and/or modify it under the terms of the GNU
